// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VDL Plugin TS e2e > compiles fixture: constants-values > constants.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * apiVersion holds a generated VDL constant.
 */
export const apiVersion = "1.2.3" as const;

/**
 * buildInfo holds a generated VDL constant.
 */
export const buildInfo = {
  "name": "plugin-ts",
  "tags": [
    "ts",
    "vdl"
  ]
} as const;

/**
 * copiedStatus holds a generated VDL constant.
 */
export const copiedStatus = "active" as const;

/**
 * defaultStatus holds a generated VDL constant.
 */
export const defaultStatus = "active" as const;

/**
 * featureEnabled holds a generated VDL constant.
 */
export const featureEnabled = true as const;

/**
 * labels holds a generated VDL constant.
 */
export const labels = {
  "env": "prod",
  "region": "eu"
} as const;

/**
 * matrix holds a generated VDL constant.
 */
export const matrix = [
  [
    1,
    2
  ],
  [
    3
  ]
] as const;

/**
 * maxItems holds a generated VDL constant.
 */
export const maxItems = 2147483647 as const;

/**
 * ratio holds a generated VDL constant.
 */
export const ratio = 3.5 as const;

/**
 * versions holds a generated VDL constant.
 */
export const versions = [
  "1.0.0",
  "1.1.0"
] as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: constants-values > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Status declares a generated VDL enum.
 */
export type Status = "" | "active" | "disabled";

/**
 * Status exposes the generated enum values and runtime helpers for Status.
 */
export const Status = {
  /**
   * Represents the Unknown member of the Status enum.
   */
  Unknown: "" as Status,

  /**
   * Represents the Active member of the Status enum.
   */
  Active: "active" as Status,

  /**
   * Represents the Disabled member of the Status enum.
   */
  Disabled: "disabled" as Status,

  /**
   * Returns every declared Status value in definition order.
   */
  values(): Status[] {
    return ["", "active", "disabled"];
  },

  /**
   * Parses a JSON string into a validated and hydrated Status value.
   */
  parse(json: string): Status {
    const input = _vdl.parseJson(json);
    const error = Status.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Status.hydrate(input as Status);
  },

  /**
   * Performs structural enum validation only (membership in Status); it does not enforce business rules.
   */
  validate(input: unknown, path = "Status"): string | null {
    if (!Status.values().includes(input as Status)) {
      return \`\${path}: invalid value "\${String(input)}" for Status enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Status value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Status): Status {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: constants-values > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.ts";
export * from "./constants.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: enums-runtime > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * DeliveryState declares a generated VDL enum.
 */
export type DeliveryState = "" | "pending" | "in-transit";

/**
 * DeliveryState exposes the generated enum values and runtime helpers for DeliveryState.
 */
export const DeliveryState = {
  /**
   * Represents the Unknown member of the DeliveryState enum.
   */
  Unknown: "" as DeliveryState,

  /**
   * Represents the Pending member of the DeliveryState enum.
   */
  Pending: "pending" as DeliveryState,

  /**
   * Represents the InTransit member of the DeliveryState enum.
   */
  InTransit: "in-transit" as DeliveryState,

  /**
   * Returns every declared DeliveryState value in definition order.
   */
  values(): DeliveryState[] {
    return ["", "pending", "in-transit"];
  },

  /**
   * Parses a JSON string into a validated and hydrated DeliveryState value.
   */
  parse(json: string): DeliveryState {
    const input = _vdl.parseJson(json);
    const error = DeliveryState.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return DeliveryState.hydrate(input as DeliveryState);
  },

  /**
   * Performs structural enum validation only (membership in DeliveryState); it does not enforce business rules.
   */
  validate(input: unknown, path = "DeliveryState"): string | null {
    if (!DeliveryState.values().includes(input as DeliveryState)) {
      return \`\${path}: invalid value "\${String(input)}" for DeliveryState enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated DeliveryState value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: DeliveryState): DeliveryState {
    return input;
  },
} as const;

/**
 * Priority declares a generated VDL enum.
 */
export type Priority = 0 | 9;

/**
 * Priority exposes the generated enum values and runtime helpers for Priority.
 */
export const Priority = {
  /**
   * Represents the Low member of the Priority enum.
   */
  Low: 0 as Priority,

  /**
   * Represents the High member of the Priority enum.
   */
  High: 9 as Priority,

  /**
   * Returns every declared Priority value in definition order.
   */
  values(): Priority[] {
    return [0, 9];
  },

  /**
   * Parses a JSON string into a validated and hydrated Priority value.
   */
  parse(json: string): Priority {
    const input = _vdl.parseJson(json);
    const error = Priority.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Priority.hydrate(input as Priority);
  },

  /**
   * Performs structural enum validation only (membership in Priority); it does not enforce business rules.
   */
  validate(input: unknown, path = "Priority"): string | null {
    if (!Priority.values().includes(input as Priority)) {
      return \`\${path}: invalid value "\${String(input)}" for Priority enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Priority value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Priority): Priority {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: enums-runtime > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-js > constants.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * apiVersion holds a generated VDL constant.
 */
export const apiVersion = "1.0.0" as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-js > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Status declares a generated VDL enum.
 */
export type Status = "ready";

/**
 * Status exposes the generated enum values and runtime helpers for Status.
 */
export const Status = {
  /**
   * Represents the Ready member of the Status enum.
   */
  Ready: "ready" as Status,

  /**
   * Returns every declared Status value in definition order.
   */
  values(): Status[] {
    return ["ready"];
  },

  /**
   * Parses a JSON string into a validated and hydrated Status value.
   */
  parse(json: string): Status {
    const input = _vdl.parseJson(json);
    const error = Status.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Status.hydrate(input as Status);
  },

  /**
   * Performs structural enum validation only (membership in Status); it does not enforce business rules.
   */
  validate(input: unknown, path = "Status"): string | null {
    if (!Status.values().includes(input as Status)) {
      return \`\${path}: invalid value "\${String(input)}" for Status enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Status value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Status): Status {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-js > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.js";
export * from "./types.js";
export * from "./constants.js";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-js > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

import { Status } from "./enums.js";

/**
 * Payload represents a generated VDL object.
 */
export type Payload = {
  name: string;
  status: Status;
};

/**
 * Payload exposes the generated runtime helpers for Payload.
 */
export const Payload = {
  /**
   * Parses a JSON string into a validated and hydrated Payload value.
   */
  parse(json: string): Payload {
    const input = _vdl.parseJson(json);
    const error = Payload.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Payload.hydrate(input as Payload);
  },

  /**
   * Performs structural validation for Payload (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Payload"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.name\`;
    if (!_vdl.hasOwn(record0, "name") || record0["name"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["name"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["name"])}\`;
    }
    const fieldPath0_1 = \`\${path}.status\`;
    if (!_vdl.hasOwn(record0, "status") || record0["status"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    {
      const error = Status.validate(record0["status"], fieldPath0_1);
      if (error !== null) {
        return error;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Payload value into its runtime representation.
   */
  hydrate(input: Payload): Payload {
    return {
      name: input.name,
      status: Status.hydrate(input.status),
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-none > constants.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * apiVersion holds a generated VDL constant.
 */
export const apiVersion = "1.0.0" as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-none > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Status declares a generated VDL enum.
 */
export type Status = "ready";

/**
 * Status exposes the generated enum values and runtime helpers for Status.
 */
export const Status = {
  /**
   * Represents the Ready member of the Status enum.
   */
  Ready: "ready" as Status,

  /**
   * Returns every declared Status value in definition order.
   */
  values(): Status[] {
    return ["ready"];
  },

  /**
   * Parses a JSON string into a validated and hydrated Status value.
   */
  parse(json: string): Status {
    const input = _vdl.parseJson(json);
    const error = Status.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Status.hydrate(input as Status);
  },

  /**
   * Performs structural enum validation only (membership in Status); it does not enforce business rules.
   */
  validate(input: unknown, path = "Status"): string | null {
    if (!Status.values().includes(input as Status)) {
      return \`\${path}: invalid value "\${String(input)}" for Status enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Status value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Status): Status {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-none > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums";
export * from "./types";
export * from "./constants";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-none > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

import { Status } from "./enums";

/**
 * Payload represents a generated VDL object.
 */
export type Payload = {
  name: string;
  status: Status;
};

/**
 * Payload exposes the generated runtime helpers for Payload.
 */
export const Payload = {
  /**
   * Parses a JSON string into a validated and hydrated Payload value.
   */
  parse(json: string): Payload {
    const input = _vdl.parseJson(json);
    const error = Payload.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Payload.hydrate(input as Payload);
  },

  /**
   * Performs structural validation for Payload (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Payload"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.name\`;
    if (!_vdl.hasOwn(record0, "name") || record0["name"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["name"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["name"])}\`;
    }
    const fieldPath0_1 = \`\${path}.status\`;
    if (!_vdl.hasOwn(record0, "status") || record0["status"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    {
      const error = Status.validate(record0["status"], fieldPath0_1);
      if (error !== null) {
        return error;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Payload value into its runtime representation.
   */
  hydrate(input: Payload): Payload {
    return {
      name: input.name,
      status: Status.hydrate(input.status),
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-ts > constants.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * apiVersion holds a generated VDL constant.
 */
export const apiVersion = "1.0.0" as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-ts > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Status declares a generated VDL enum.
 */
export type Status = "ready";

/**
 * Status exposes the generated enum values and runtime helpers for Status.
 */
export const Status = {
  /**
   * Represents the Ready member of the Status enum.
   */
  Ready: "ready" as Status,

  /**
   * Returns every declared Status value in definition order.
   */
  values(): Status[] {
    return ["ready"];
  },

  /**
   * Parses a JSON string into a validated and hydrated Status value.
   */
  parse(json: string): Status {
    const input = _vdl.parseJson(json);
    const error = Status.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Status.hydrate(input as Status);
  },

  /**
   * Performs structural enum validation only (membership in Status); it does not enforce business rules.
   */
  validate(input: unknown, path = "Status"): string | null {
    if (!Status.values().includes(input as Status)) {
      return \`\${path}: invalid value "\${String(input)}" for Status enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Status value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Status): Status {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-ts > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.ts";
export * from "./types.ts";
export * from "./constants.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: import-extension-ts > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

import { Status } from "./enums.ts";

/**
 * Payload represents a generated VDL object.
 */
export type Payload = {
  name: string;
  status: Status;
};

/**
 * Payload exposes the generated runtime helpers for Payload.
 */
export const Payload = {
  /**
   * Parses a JSON string into a validated and hydrated Payload value.
   */
  parse(json: string): Payload {
    const input = _vdl.parseJson(json);
    const error = Payload.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Payload.hydrate(input as Payload);
  },

  /**
   * Performs structural validation for Payload (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Payload"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.name\`;
    if (!_vdl.hasOwn(record0, "name") || record0["name"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["name"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["name"])}\`;
    }
    const fieldPath0_1 = \`\${path}.status\`;
    if (!_vdl.hasOwn(record0, "status") || record0["status"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    {
      const error = Status.validate(record0["status"], fieldPath0_1);
      if (error !== null) {
        return error;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Payload value into its runtime representation.
   */
  hydrate(input: Payload): Payload {
    return {
      name: input.name,
      status: Status.hydrate(input.status),
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: json-parse-and-validation-errors > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Mode declares a generated VDL enum.
 */
export type Mode = "on" | "off";

/**
 * Mode exposes the generated enum values and runtime helpers for Mode.
 */
export const Mode = {
  /**
   * Represents the On member of the Mode enum.
   */
  On: "on" as Mode,

  /**
   * Represents the Off member of the Mode enum.
   */
  Off: "off" as Mode,

  /**
   * Returns every declared Mode value in definition order.
   */
  values(): Mode[] {
    return ["on", "off"];
  },

  /**
   * Parses a JSON string into a validated and hydrated Mode value.
   */
  parse(json: string): Mode {
    const input = _vdl.parseJson(json);
    const error = Mode.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Mode.hydrate(input as Mode);
  },

  /**
   * Performs structural enum validation only (membership in Mode); it does not enforce business rules.
   */
  validate(input: unknown, path = "Mode"): string | null {
    if (!Mode.values().includes(input as Mode)) {
      return \`\${path}: invalid value "\${String(input)}" for Mode enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Mode value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Mode): Mode {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: json-parse-and-validation-errors > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.ts";
export * from "./types.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: json-parse-and-validation-errors > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

import { Mode } from "./enums.ts";

/**
 * ServiceConfig represents a generated VDL object.
 */
export type ServiceConfig = {
  mode: Mode;
  startedAt: Date;
};

/**
 * ServiceConfig exposes the generated runtime helpers for ServiceConfig.
 */
export const ServiceConfig = {
  /**
   * Parses a JSON string into a validated and hydrated ServiceConfig value.
   */
  parse(json: string): ServiceConfig {
    const input = _vdl.parseJson(json);
    const error = ServiceConfig.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return ServiceConfig.hydrate(input as ServiceConfig);
  },

  /**
   * Performs structural validation for ServiceConfig (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "ServiceConfig"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.mode\`;
    if (!_vdl.hasOwn(record0, "mode") || record0["mode"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    {
      const error = Mode.validate(record0["mode"], fieldPath0_0);
      if (error !== null) {
        return error;
      }
    }
    const fieldPath0_1 = \`\${path}.startedAt\`;
    if (!_vdl.hasOwn(record0, "startedAt") || record0["startedAt"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    if (!_vdl.isValidDateInput(record0["startedAt"])) {
      return \`\${fieldPath0_1}: expected datetime string or Date, got \${_vdl.describeValue(record0["startedAt"])}\`;
    }
    return null;
  },

  /**
   * Hydrates a validated ServiceConfig value into its runtime representation.
   */
  hydrate(input: ServiceConfig): ServiceConfig {
    return {
      mode: Mode.hydrate(input.mode),
      startedAt: _vdl.hydrateDateInput(input.startedAt),
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: options-disable-outputs > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Status declares a generated VDL enum.
 */
export type Status = "ready";

/**
 * Status exposes the generated enum values and runtime helpers for Status.
 */
export const Status = {
  /**
   * Represents the Ready member of the Status enum.
   */
  Ready: "ready" as Status,

  /**
   * Returns every declared Status value in definition order.
   */
  values(): Status[] {
    return ["ready"];
  },

  /**
   * Parses a JSON string into a validated and hydrated Status value.
   */
  parse(json: string): Status {
    const input = _vdl.parseJson(json);
    const error = Status.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Status.hydrate(input as Status);
  },

  /**
   * Performs structural enum validation only (membership in Status); it does not enforce business rules.
   */
  validate(input: unknown, path = "Status"): string | null {
    if (!Status.values().includes(input as Status)) {
      return \`\${path}: invalid value "\${String(input)}" for Status enum\`;
    }
    return null;
  },

  /**
   * Hydrates a validated Status value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Status): Status {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: options-disable-outputs > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.ts";
export * from "./types.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: options-disable-outputs > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

import { Status } from "./enums.ts";

/**
 * Payload represents a generated VDL object.
 */
export type Payload = {
  status: Status;
};

/**
 * Payload exposes the generated runtime helpers for Payload.
 */
export const Payload = {
  /**
   * Parses a JSON string into a validated and hydrated Payload value.
   */
  parse(json: string): Payload {
    const input = _vdl.parseJson(json);
    const error = Payload.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Payload.hydrate(input as Payload);
  },

  /**
   * Performs structural validation for Payload (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Payload"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.status\`;
    if (!_vdl.hasOwn(record0, "status") || record0["status"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    {
      const error = Status.validate(record0["status"], fieldPath0_0);
      if (error !== null) {
        return error;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Payload value into its runtime representation.
   */
  hydrate(input: Payload): Payload {
    return {
      status: Status.hydrate(input.status),
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: required-presence-checks > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./types.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: required-presence-checks > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * PresencePayload represents a generated VDL object.
 */
export type PresencePayload = {
  emptyText: string;
  zeroCount: number;
  disabled: boolean;
};

/**
 * PresencePayload exposes the generated runtime helpers for PresencePayload.
 */
export const PresencePayload = {
  /**
   * Parses a JSON string into a validated and hydrated PresencePayload value.
   */
  parse(json: string): PresencePayload {
    const input = _vdl.parseJson(json);
    const error = PresencePayload.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return PresencePayload.hydrate(input as PresencePayload);
  },

  /**
   * Performs structural validation for PresencePayload (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "PresencePayload"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.emptyText\`;
    if (!_vdl.hasOwn(record0, "emptyText") || record0["emptyText"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["emptyText"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["emptyText"])}\`;
    }
    const fieldPath0_1 = \`\${path}.zeroCount\`;
    if (!_vdl.hasOwn(record0, "zeroCount") || record0["zeroCount"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    if (typeof record0["zeroCount"] !== "number" || !Number.isFinite(record0["zeroCount"])) {
      return \`\${fieldPath0_1}: expected number, got \${_vdl.describeValue(record0["zeroCount"])}\`;
    }
    const fieldPath0_2 = \`\${path}.disabled\`;
    if (!_vdl.hasOwn(record0, "disabled") || record0["disabled"] === undefined) {
      return \`\${fieldPath0_2}: required field is missing\`;
    }
    if (typeof record0["disabled"] !== "boolean") {
      return \`\${fieldPath0_2}: expected boolean, got \${_vdl.describeValue(record0["disabled"])}\`;
    }
    return null;
  },

  /**
   * Hydrates a validated PresencePayload value into its runtime representation.
   */
  hydrate(input: PresencePayload): PresencePayload {
    return {
      emptyText: input.emptyText,
      zeroCount: input.zeroCount,
      disabled: input.disabled,
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: strict-disabled > enums.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Status declares a generated VDL enum.
 */
export type Status = "ready";

/**
 * Status exposes the generated enum values and runtime helpers for Status.
 */
export const Status = {
  /**
   * Represents the Ready member of the Status enum.
   */
  Ready: "ready" as Status,

  /**
   * Returns every declared Status value in definition order.
   */
  values(): Status[] {
    return ["ready"];
  },

  /**
   * Parses a JSON string and hydrates it as Status without runtime validation.
   */
  parse(json: string): Status {
    const input = _vdl.parseJson(json);
    return Status.hydrate(input as Status);
  },

  /**
   * Hydrates a validated Status value. Enums return the input unchanged to keep the generated API uniform.
   */
  hydrate(input: Status): Status {
    return input;
  },
} as const;

/**
 * Internal helpers shared by the generated enum namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: strict-disabled > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./enums.ts";
export * from "./types.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: strict-disabled > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

import { Status } from "./enums.ts";

/**
 * Payload represents a generated VDL object.
 */
export type Payload = {
  status: Status;
  createdAt: Date;
};

/**
 * Payload exposes the generated runtime helpers for Payload.
 */
export const Payload = {
  /**
   * Parses a JSON string and hydrates it as Payload without runtime validation.
   */
  parse(json: string): Payload {
    const input = _vdl.parseJson(json);
    return Payload.hydrate(input as Payload);
  },

  /**
   * Hydrates a validated Payload value into its runtime representation.
   */
  hydrate(input: Payload): Payload {
    return {
      status: Status.hydrate(input.status),
      createdAt: _vdl.hydrateDateInput(input.createdAt),
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: types-aliases-and-datetime > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./types.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: types-aliases-and-datetime > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Account represents a generated VDL object.
 */
export type Account = {
  id: UserId;
  createdAt: CreatedAt;
  labels: Labels;
  history: CreatedAt[];
};

/**
 * Account exposes the generated runtime helpers for Account.
 */
export const Account = {
  /**
   * Parses a JSON string into a validated and hydrated Account value.
   */
  parse(json: string): Account {
    const input = _vdl.parseJson(json);
    const error = Account.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Account.hydrate(input as Account);
  },

  /**
   * Performs structural validation for Account (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Account"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.id\`;
    if (!_vdl.hasOwn(record0, "id") || record0["id"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    {
      const error = UserId.validate(record0["id"], fieldPath0_0);
      if (error !== null) {
        return error;
      }
    }
    const fieldPath0_1 = \`\${path}.createdAt\`;
    if (!_vdl.hasOwn(record0, "createdAt") || record0["createdAt"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    {
      const error = CreatedAt.validate(record0["createdAt"], fieldPath0_1);
      if (error !== null) {
        return error;
      }
    }
    const fieldPath0_2 = \`\${path}.labels\`;
    if (!_vdl.hasOwn(record0, "labels") || record0["labels"] === undefined) {
      return \`\${fieldPath0_2}: required field is missing\`;
    }
    {
      const error = Labels.validate(record0["labels"], fieldPath0_2);
      if (error !== null) {
        return error;
      }
    }
    const fieldPath0_3 = \`\${path}.history\`;
    if (!_vdl.hasOwn(record0, "history") || record0["history"] === undefined) {
      return \`\${fieldPath0_3}: required field is missing\`;
    }
    if (!Array.isArray(record0["history"])) {
      return \`\${fieldPath0_3}: expected array, got \${_vdl.describeValue(record0["history"])}\`;
    }
    for (let index1 = 0; index1 < record0["history"].length; index1 += 1) {
      const itemPath1 = \`\${fieldPath0_3}[\${index1}]\`;
      {
        const error = CreatedAt.validate(record0["history"][index1], itemPath1);
        if (error !== null) {
          return error;
        }
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Account value into its runtime representation.
   */
  hydrate(input: Account): Account {
    return {
      id: UserId.hydrate(input.id),
      createdAt: CreatedAt.hydrate(input.createdAt),
      labels: Labels.hydrate(input.labels),
      history: input.history.map((item1) => CreatedAt.hydrate(item1)),
    };
  },
} as const;

/**
 * CreatedAt represents a generated VDL type alias.
 */
export type CreatedAt = Date;

/**
 * CreatedAt exposes the generated runtime helpers for CreatedAt.
 */
export const CreatedAt = {
  /**
   * Parses a JSON string into a validated and hydrated CreatedAt value.
   */
  parse(json: string): CreatedAt {
    const input = _vdl.parseJson(json);
    const error = CreatedAt.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return CreatedAt.hydrate(input as CreatedAt);
  },

  /**
   * Performs structural validation for CreatedAt (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "CreatedAt"): string | null {
    if (!_vdl.isValidDateInput(input)) {
      return \`\${path}: expected datetime string or Date, got \${_vdl.describeValue(input)}\`;
    }
    return null;
  },

  /**
   * Hydrates a validated CreatedAt value into its runtime representation.
   */
  hydrate(input: CreatedAt): CreatedAt {
    return _vdl.hydrateDateInput(input);
  },
} as const;

/**
 * Labels represents a generated VDL type alias.
 */
export type Labels = Record<string, string>;

/**
 * Labels exposes the generated runtime helpers for Labels.
 */
export const Labels = {
  /**
   * Parses a JSON string into a validated and hydrated Labels value.
   */
  parse(json: string): Labels {
    const input = _vdl.parseJson(json);
    const error = Labels.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Labels.hydrate(input as Labels);
  },

  /**
   * Performs structural validation for Labels (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Labels"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    for (const [key0, value0] of Object.entries(input)) {
      const valuePath0 = \`\${path}[\${JSON.stringify(key0)}]\`;
      if (typeof value0 !== "string") {
        return \`\${valuePath0}: expected string, got \${_vdl.describeValue(value0)}\`;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Labels value into its runtime representation.
   */
  hydrate(input: Labels): Labels {
    return Object.fromEntries(Object.entries(input).map(([key0, value0]) => [key0, value0]));
  },
} as const;

/**
 * UserId represents a generated VDL type alias.
 */
export type UserId = string;

/**
 * UserId exposes the generated runtime helpers for UserId.
 */
export const UserId = {
  /**
   * Parses a JSON string into a validated and hydrated UserId value.
   */
  parse(json: string): UserId {
    const input = _vdl.parseJson(json);
    const error = UserId.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return UserId.hydrate(input as UserId);
  },

  /**
   * Performs structural validation for UserId (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "UserId"): string | null {
    if (typeof input !== "string") {
      return \`\${path}: expected string, got \${_vdl.describeValue(input)}\`;
    }
    return null;
  },

  /**
   * Hydrates a validated UserId value into its runtime representation.
   */
  hydrate(input: UserId): UserId {
    return input;
  },
} as const;

/**
 * UserIds represents a generated VDL type alias.
 */
export type UserIds = UserId[];

/**
 * UserIds exposes the generated runtime helpers for UserIds.
 */
export const UserIds = {
  /**
   * Parses a JSON string into a validated and hydrated UserIds value.
   */
  parse(json: string): UserIds {
    const input = _vdl.parseJson(json);
    const error = UserIds.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return UserIds.hydrate(input as UserIds);
  },

  /**
   * Performs structural validation for UserIds (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "UserIds"): string | null {
    if (!Array.isArray(input)) {
      return \`\${path}: expected array, got \${_vdl.describeValue(input)}\`;
    }
    for (let index0 = 0; index0 < input.length; index0 += 1) {
      const itemPath0 = \`\${path}[\${index0}]\`;
      {
        const error = UserId.validate(input[index0], itemPath0);
        if (error !== null) {
          return error;
        }
      }
    }
    return null;
  },

  /**
   * Hydrates a validated UserIds value into its runtime representation.
   */
  hydrate(input: UserIds): UserIds {
    return input.map((item0) => UserId.hydrate(item0));
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;

exports[`VDL Plugin TS e2e > compiles fixture: types-inline-objects > index.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

export * from "./types.ts";"
`;

exports[`VDL Plugin TS e2e > compiles fixture: types-inline-objects > types.ts 1`] = `
"/* eslint-disable */
/* tslint:disable */
// biome-ignore-all lint: Generated by VDL

/**
 * Envelope represents a generated VDL object.
 */
export type Envelope = {
  item: EnvelopeItem;
  items: EnvelopeItemsItem[];
  lookup: Record<string, EnvelopeLookupValue>;
  nested: EnvelopeNested;
};

/**
 * Envelope exposes the generated runtime helpers for Envelope.
 */
export const Envelope = {
  /**
   * Parses a JSON string into a validated and hydrated Envelope value.
   */
  parse(json: string): Envelope {
    const input = _vdl.parseJson(json);
    const error = Envelope.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return Envelope.hydrate(input as Envelope);
  },

  /**
   * Performs structural validation for Envelope (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "Envelope"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.item\`;
    if (!_vdl.hasOwn(record0, "item") || record0["item"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    {
      const error = EnvelopeItem.validate(record0["item"], fieldPath0_0);
      if (error !== null) {
        return error;
      }
    }
    const fieldPath0_1 = \`\${path}.items\`;
    if (!_vdl.hasOwn(record0, "items") || record0["items"] === undefined) {
      return \`\${fieldPath0_1}: required field is missing\`;
    }
    if (!Array.isArray(record0["items"])) {
      return \`\${fieldPath0_1}: expected array, got \${_vdl.describeValue(record0["items"])}\`;
    }
    for (let index1 = 0; index1 < record0["items"].length; index1 += 1) {
      const itemPath1 = \`\${fieldPath0_1}[\${index1}]\`;
      {
        const error = EnvelopeItemsItem.validate(record0["items"][index1], itemPath1);
        if (error !== null) {
          return error;
        }
      }
    }
    const fieldPath0_2 = \`\${path}.lookup\`;
    if (!_vdl.hasOwn(record0, "lookup") || record0["lookup"] === undefined) {
      return \`\${fieldPath0_2}: required field is missing\`;
    }
    if (!_vdl.isRecord(record0["lookup"])) {
      return \`\${fieldPath0_2}: expected object, got \${_vdl.describeValue(record0["lookup"])}\`;
    }
    for (const [key1, value1] of Object.entries(record0["lookup"])) {
      const valuePath1 = \`\${fieldPath0_2}[\${JSON.stringify(key1)}]\`;
      {
        const error = EnvelopeLookupValue.validate(value1, valuePath1);
        if (error !== null) {
          return error;
        }
      }
    }
    const fieldPath0_3 = \`\${path}.nested\`;
    if (!_vdl.hasOwn(record0, "nested") || record0["nested"] === undefined) {
      return \`\${fieldPath0_3}: required field is missing\`;
    }
    {
      const error = EnvelopeNested.validate(record0["nested"], fieldPath0_3);
      if (error !== null) {
        return error;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated Envelope value into its runtime representation.
   */
  hydrate(input: Envelope): Envelope {
    return {
      item: EnvelopeItem.hydrate(input.item),
      items: input.items.map((item1) => EnvelopeItemsItem.hydrate(item1)),
      lookup: Object.fromEntries(Object.entries(input.lookup).map(([key1, value1]) => [key1, EnvelopeLookupValue.hydrate(value1)])),
      nested: EnvelopeNested.hydrate(input.nested),
    };
  },
} as const;

/**
 * EnvelopeItem represents a generated VDL object.
 */
export type EnvelopeItem = {
  label: string;
  enabled?: boolean;
};

/**
 * EnvelopeItem exposes the generated runtime helpers for EnvelopeItem.
 */
export const EnvelopeItem = {
  /**
   * Parses a JSON string into a validated and hydrated EnvelopeItem value.
   */
  parse(json: string): EnvelopeItem {
    const input = _vdl.parseJson(json);
    const error = EnvelopeItem.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return EnvelopeItem.hydrate(input as EnvelopeItem);
  },

  /**
   * Performs structural validation for EnvelopeItem (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "EnvelopeItem"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.label\`;
    if (!_vdl.hasOwn(record0, "label") || record0["label"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["label"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["label"])}\`;
    }
    const fieldPath0_1 = \`\${path}.enabled\`;
    if (_vdl.hasOwn(record0, "enabled") && record0["enabled"] !== undefined) {
      if (typeof record0["enabled"] !== "boolean") {
        return \`\${fieldPath0_1}: expected boolean, got \${_vdl.describeValue(record0["enabled"])}\`;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated EnvelopeItem value into its runtime representation.
   */
  hydrate(input: EnvelopeItem): EnvelopeItem {
    return {
      label: input.label,
      enabled: input.enabled === undefined ? undefined : input.enabled,
    };
  },
} as const;

/**
 * EnvelopeItemsItem represents a generated VDL object.
 */
export type EnvelopeItemsItem = {
  code: string;
};

/**
 * EnvelopeItemsItem exposes the generated runtime helpers for EnvelopeItemsItem.
 */
export const EnvelopeItemsItem = {
  /**
   * Parses a JSON string into a validated and hydrated EnvelopeItemsItem value.
   */
  parse(json: string): EnvelopeItemsItem {
    const input = _vdl.parseJson(json);
    const error = EnvelopeItemsItem.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return EnvelopeItemsItem.hydrate(input as EnvelopeItemsItem);
  },

  /**
   * Performs structural validation for EnvelopeItemsItem (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "EnvelopeItemsItem"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.code\`;
    if (!_vdl.hasOwn(record0, "code") || record0["code"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["code"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["code"])}\`;
    }
    return null;
  },

  /**
   * Hydrates a validated EnvelopeItemsItem value into its runtime representation.
   */
  hydrate(input: EnvelopeItemsItem): EnvelopeItemsItem {
    return {
      code: input.code,
    };
  },
} as const;

/**
 * EnvelopeLookupValue represents a generated VDL object.
 */
export type EnvelopeLookupValue = {
  id: string;
};

/**
 * EnvelopeLookupValue exposes the generated runtime helpers for EnvelopeLookupValue.
 */
export const EnvelopeLookupValue = {
  /**
   * Parses a JSON string into a validated and hydrated EnvelopeLookupValue value.
   */
  parse(json: string): EnvelopeLookupValue {
    const input = _vdl.parseJson(json);
    const error = EnvelopeLookupValue.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return EnvelopeLookupValue.hydrate(input as EnvelopeLookupValue);
  },

  /**
   * Performs structural validation for EnvelopeLookupValue (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "EnvelopeLookupValue"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.id\`;
    if (!_vdl.hasOwn(record0, "id") || record0["id"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    if (typeof record0["id"] !== "string") {
      return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["id"])}\`;
    }
    return null;
  },

  /**
   * Hydrates a validated EnvelopeLookupValue value into its runtime representation.
   */
  hydrate(input: EnvelopeLookupValue): EnvelopeLookupValue {
    return {
      id: input.id,
    };
  },
} as const;

/**
 * EnvelopeNested represents a generated VDL object.
 */
export type EnvelopeNested = {
  child: EnvelopeNestedChild;
};

/**
 * EnvelopeNested exposes the generated runtime helpers for EnvelopeNested.
 */
export const EnvelopeNested = {
  /**
   * Parses a JSON string into a validated and hydrated EnvelopeNested value.
   */
  parse(json: string): EnvelopeNested {
    const input = _vdl.parseJson(json);
    const error = EnvelopeNested.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return EnvelopeNested.hydrate(input as EnvelopeNested);
  },

  /**
   * Performs structural validation for EnvelopeNested (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "EnvelopeNested"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.child\`;
    if (!_vdl.hasOwn(record0, "child") || record0["child"] === undefined) {
      return \`\${fieldPath0_0}: required field is missing\`;
    }
    {
      const error = EnvelopeNestedChild.validate(record0["child"], fieldPath0_0);
      if (error !== null) {
        return error;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated EnvelopeNested value into its runtime representation.
   */
  hydrate(input: EnvelopeNested): EnvelopeNested {
    return {
      child: EnvelopeNestedChild.hydrate(input.child),
    };
  },
} as const;

/**
 * EnvelopeNestedChild represents a generated VDL object.
 */
export type EnvelopeNestedChild = {
  note?: string;
};

/**
 * EnvelopeNestedChild exposes the generated runtime helpers for EnvelopeNestedChild.
 */
export const EnvelopeNestedChild = {
  /**
   * Parses a JSON string into a validated and hydrated EnvelopeNestedChild value.
   */
  parse(json: string): EnvelopeNestedChild {
    const input = _vdl.parseJson(json);
    const error = EnvelopeNestedChild.validate(input);
    if (error !== null) {
      throw new Error(error);
    }
    return EnvelopeNestedChild.hydrate(input as EnvelopeNestedChild);
  },

  /**
   * Performs structural validation for EnvelopeNestedChild (required field presence and basic type shape only); it does not enforce business rules.
   */
  validate(input: unknown, path = "EnvelopeNestedChild"): string | null {
    if (!_vdl.isRecord(input)) {
      return \`\${path}: expected object, got \${_vdl.describeValue(input)}\`;
    }
    const record0 = input as Record<string, unknown>;
    const fieldPath0_0 = \`\${path}.note\`;
    if (_vdl.hasOwn(record0, "note") && record0["note"] !== undefined) {
      if (typeof record0["note"] !== "string") {
        return \`\${fieldPath0_0}: expected string, got \${_vdl.describeValue(record0["note"])}\`;
      }
    }
    return null;
  },

  /**
   * Hydrates a validated EnvelopeNestedChild value into its runtime representation.
   */
  hydrate(input: EnvelopeNestedChild): EnvelopeNestedChild {
    return {
      note: input.note === undefined ? undefined : input.note,
    };
  },
} as const;

/**
 * Internal helpers shared by the generated runtime namespaces in this file.
 */
const _vdl = {
  /**
   * Parses JSON text and wraps syntax failures in a stable generated error message.
   */
  parseJson(json: string): unknown {
    try {
      return JSON.parse(json);
    } catch (error) {
      const message = error instanceof Error ? error.message : String(error);
      throw new Error(\`Invalid JSON input: \${message}\`);
    }
  },

  /**
   * Checks whether a value can be validated as a plain object record.
   */
  isRecord(value: unknown): value is Record<string, unknown> {
    return typeof value === "object" && value !== null && !Array.isArray(value) && !(value instanceof Date);
  },

  /**
   * Checks whether a record defines a property directly on the current object.
   */
  hasOwn(record: Record<string, unknown>, key: string): boolean {
    return Object.prototype.hasOwnProperty.call(record, key);
  },

  /**
   * Describes an input value using the categories reported by generated validation errors.
   */
  describeValue(value: unknown): string {
    if (value === null) {
      return "null";
    }
    if (Array.isArray(value)) {
      return "array";
    }
    if (value instanceof Date) {
      return "Date";
    }
    return typeof value;
  },

  /**
   * Checks whether an input can be hydrated into a valid Date instance.
   */
  isValidDateInput(value: unknown): value is string | Date {
    if (value instanceof Date) {
      return !Number.isNaN(value.getTime());
    }
    if (typeof value !== "string") {
      return false;
    }
    return !Number.isNaN(new Date(value).getTime());
  },

  /**
   * Hydrates a string or Date input into a fresh Date instance.
   */
  hydrateDateInput(value: string | Date): Date {
    return value instanceof Date ? new Date(value.getTime()) : new Date(value);
  },
} as const;"
`;
